--- a/package.json
+++ b/package.json
@@ -13,20 +13,23 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.15",
-    "@types/node": "^22.13.13",
+    "@tanstack/react-query": "^5.71.10",
+    "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "luxon": "^3.6.1",
+    "qs": "^6.14.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.0",
     "react-transition-group": "^4.4.5",
     "tailwind-merge": "^3.0.2",
-    "tailwindcss": "^4.0.15"
+    "tailwindcss": "^4.0.15",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.6",
-    "@eslint/js": "^9.21.0",
     "@storybook/addon-essentials": "^8.6.11",
     "@storybook/addon-onboarding": "^8.6.11",
     "@storybook/blocks": "^8.6.11",
@@ -34,6 +37,9 @@
     "@storybook/react": "^8.6.11",
     "@storybook/react-vite": "^8.6.11",
     "@storybook/test": "^8.6.11",
+    "@types/luxon": "^3.6.2",
+    "@types/node": "^22.13.13",
+    "@types/qs": "^6.9.18",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@types/react-transition-group": "^4.4.12",
