--- a/.gitignore
+++ b/.gitignore
@@ -130,7 +130,7 @@ dist
 .yarn/unplugged
 .yarn/build-state.yml
 .yarn/install-state.gz
-.pnp.*
+!.pnp.*
 
 ### Node Patch ###
 # Serverless Webpack directories
