--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@floating-ui/react": "^0.27.6",
     "@tailwindcss/vite": "^4.0.15",
     "@tanstack/react-query": "^5.71.10",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.487.0",
     "luxon": "^3.6.1",
     "qs": "^6.14.0",
     "react": "^19.0.0",
@@ -24,8 +26,9 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.0",
     "react-transition-group": "^4.4.5",
-    "tailwind-merge": "^3.0.2",
+    "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.0.15",
+    "tw-animate-css": "^1.2.5",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
@@ -39,7 +42,7 @@
     "@storybook/react-vite": "^8.6.11",
     "@storybook/test": "^8.6.11",
     "@types/luxon": "^3.6.2",
-    "@types/node": "^22.13.13",
+    "@types/node": "^22.14.0",
     "@types/qs": "^6.9.18",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
