--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
-    "@floating-ui/react": "^0.27.6",
+    "@radix-ui/react-popover": "^1.1.7",
     "@tailwindcss/vite": "^4.0.15",
     "@tanstack/react-query": "^5.71.10",
     "axios": "^1.8.4",
