--- a/package.json
+++ b/package.json
@@ -17,6 +17,11 @@
     "@radix-ui/react-popover": "^1.1.7",
     "@tailwindcss/vite": "^4.1.3",
     "@tanstack/react-query": "^5.72.2",
+    "@tiptap/extension-placeholder": "^2.11.7",
+    "@tiptap/extension-text-align": "^2.11.7",
+    "@tiptap/pm": "^2.11.7",
+    "@tiptap/react": "^2.11.7",
+    "@tiptap/starter-kit": "^2.11.7",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -44,6 +49,7 @@
     "@storybook/react": "^8.6.12",
     "@storybook/react-vite": "^8.6.12",
     "@storybook/test": "^8.6.12",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/luxon": "^3.6.2",
     "@types/node": "^22.14.0",
     "@types/qs": "^6.9.18",
