--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^12.9.2",
     "lucide-react": "^0.487.0",
     "luxon": "^3.6.1",
     "motion": "^12.7.4",
