--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.5.0",
     "react-swiper": "^0.1.5",
     "react-transition-group": "^4.4.5",
