--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
+    "event-source-polyfill": "^1.0.31",
     "heic2any": "^0.0.4",
     "lucide-react": "^0.487.0",
     "luxon": "^3.6.1",
@@ -57,6 +58,7 @@
     "@storybook/react-vite": "^8.6.12",
     "@storybook/test": "^8.6.12",
     "@tailwindcss/typography": "^0.5.16",
+    "@types/event-source-polyfill": "^1.0.5",
     "@types/luxon": "^3.6.2",
     "@types/node": "^22.14.0",
     "@types/qs": "^6.9.18",
