feat: 다이어리 북에 스티커 기능 추가 및 UI 개선
- 다이어리 북 생성 및 수정 기능에 스티커 추가
- 스티커 선택 및 조작을 위한 새로운 다이얼로그 컴포넌트 구현
- 스티커 데이터 및 카테고리 정의 추가
- 스티커 선택 UI 및 조작 기능 개선
- 다이어리 커버 이미지 업로드 및 선택 기능 통합

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,6 @@
     "source.organizeImports": "explicit",
     "source.removeUnusedImports": "explicit",
     "source.sortImports": "explicit"
-  }
+  },
+  "typescript.tsdk": "node_modules/typescript/lib"
 }
