--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-dialog": "^1.1.7",
     "@radix-ui/react-popover": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.0",
+    "@reactuses/core": "^6.0.2",
     "@tailwindcss/vite": "^4.1.3",
     "@tanstack/react-query": "^5.72.2",
     "@tiptap/extension-placeholder": "^2.11.7",
