--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.3",
     "tw-animate-css": "^1.2.5",
+    "uuid": "^11.1.0",
     "vaul": "^1.1.2",
     "zustand": "^5.0.3"
   },
