--- a/manifest.json
+++ b/manifest.json
@@ -9,17 +9,17 @@
   "description": "메모리아는 당신의 일상을 기록하고 공감해주는 앱입니다.",
   "icons": [
     {
-      "src": "/Icon.png",
+      "src": "/favicon.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/Icon.png",
+      "src": "/favicon.png",
       "sizes": "512x512",
       "type": "image/png"
     },
     {
-      "src": "/Icon.png",
+      "src": "/favicon.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
