--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-slot": "^1.2.0",
     "@reactuses/core": "^6.0.2",
     "@tanstack/react-query": "^5.72.2",
+    "@tiptap/extension-hard-break": "^2.12.0",
     "@tiptap/extension-placeholder": "^2.11.7",
     "@tiptap/extension-text-align": "^2.11.7",
     "@tiptap/pm": "^2.11.7",
